--- a/module-1/lab-error-handling/your-code/main.ipynb
+++ b/module-1/lab-error-handling/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,51 +32,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'some_string' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
-    "\n",
-    "print(some_string)"
+    "try:\n",
+    "    print(some_string)\n",
+    "except:\n",
+    "    print(\"name 'some_string' is not defined\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unsupported operand type(s) for ** or pow(): 'str' and 'int'\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
-    "\n",
-    "for i in ['a','b','c']:\n",
-    "    print (i**2)"
+    "try:\n",
+    "    for i in ['a','b','c']:\n",
+    "        print (i**2)\n",
+    "except:\n",
+    "    print(\"unsupported operand type(s) for ** or pow(): 'str' and 'int'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
-    "\n",
-    "x = 5\n",
-    "y = 0\n",
-    "\n",
-    "z = x/y"
+    "try:\n",
+    "    x = 5\n",
+    "    y = 0\n",
+    "    z = x/y\n",
+    "except:\n",
+    "    print(\"division by zero\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list index out of range\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
-    "\n",
-    "abc=[10,20,20]\n",
-    "print(abc[3])"
+    "try:\n",
+    "    abc=[10,20,20]\n",
+    "    print(abc[3])\n",
+    "except:\n",
+    "    print(\"list index out of range\")"
    ]
   },
   {
@@ -92,26 +133,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36msqrt_for_all\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: -4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 2.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: math domain error"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Modify the code below to handle positive and negative numbers by adding an if statement and performing a transformation:\n",
     "\n",
     "def sqrt_for_all(x):\n",
+    "    if x < 0:\n",
+    "        return x*(-1)\n",
+    "    else:\n",
+    "        pass\n",
     "    # This function will take any real number and return the square root of its magnitude\n",
     "    # Input: real number\n",
     "    # Output: real number\n",
@@ -125,26 +168,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: 5, 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 5.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Modify the code below to handle zero as well. In the case of zero, return zero\n",
     "\n",
     "def divide(x, y):\n",
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        pass\n",
     "    # This function will take any two real numbers and return their quotient. If the denominator is zero, we return zero\n",
     "    # Input: real number\n",
     "    # Output: real number\n",
@@ -175,7 +220,7 @@
     }
    ],
    "source": [
-    "# Modify the function below that it will take either an number and a list or two numbers. \n",
+    "# Modify the function below that it will take either a number and a list or two numbers. \n",
     "# If we take two numbers, add them together and return a list of length 1. \n",
     "# Otherwise, add the number to every element of the list and return the resulting list\n",
     "\n",
@@ -188,7 +233,7 @@
     "    \n",
     "    # Sample Input: 5, 6\n",
     "    # Sample Output: [11]\n",
-    "    return [a + element for element in l]\n",
+    "    return \n",
     "        \n",
     "add_elements(5, 6)"
    ]
