--- a/module-1/lab-error-handling/your-code/main.ipynb
+++ b/module-1/lab-error-handling/your-code/main.ipynb
@@ -203,20 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36madd_elements\u001b[1;34m(a, l)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;31m# Sample Input: 5, 6\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Sample Output: [11]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -233,7 +231,11 @@
     "    \n",
     "    # Sample Input: 5, 6\n",
     "    # Sample Output: [11]\n",
-    "    return \n",
+    "\n",
+    "    if type(l) == int:\n",
+    "        return a + 1\n",
+    "    else:\n",
+    "        return [a + element for element in l]\n",
     "        \n",
     "add_elements(5, 6)"
    ]
@@ -249,29 +251,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
-    "sum([element + 1 for element in l]"
+    "sum([element + 1 for element in l])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current element in the loop is 1\n",
+      "The current element in the loop is 2\n",
+      "The current element in the loop is 3\n",
+      "The current element in the loop is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
     "for element in l:\n",
-    "    print(\"The current element in the loop is\" + element)"
+    "    print(\"The current element in the loop is \" + str(element))"
    ]
   },
   {
@@ -285,9 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2188758248682006"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def log_square(x):\n",
     "    # This function takes a numeric value and returns the natural log of the square of the number \n",
@@ -300,15 +335,35 @@
     "    # Sample Input: 5\n",
     "    # Sample Output: 3.21887\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "    if x == 0:\n",
+    "        raise ValueError ('Logarithm of 0 is not defined: the limit of the base b logarithm of x, when x approaches zero from the positive side (0+), is minus infinit.')\n",
+    "    else:\n",
+    "        return math.log(x**2)\n",
+    "\n",
+    "log_square(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import re\n",
+    "\n",
     "def check_capital(x):\n",
     "    # This function returns true if the string contains at least one capital letter and throws an error otherwise\n",
     "    # Input: string\n",
@@ -317,7 +372,15 @@
     "    # Sample Input: 'John'\n",
     "    # Sample Output: True\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "    if re.findall('[A-Z][a-z]*', x):\n",
+    "        return True\n",
+    "    else:\n",
+    "        raise TypeError ('The argument to the function is not of the right type.')\n",
+    "    \n",
+    "\n",
+    "check_capital('John')"
    ]
   },
   {
@@ -333,9 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from typing import Optional\n",
     "\n",
@@ -348,8 +422,22 @@
     "    # Sample Output: 41.0\n",
     "    \n",
     "    #Your Code here:\n",
+    "    \n",
+    "    if arg == None:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return arg * (9/5) + 32\n",
+    "\n",
+    "temp_convert(5)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
