--- a/module-1/lab-object-oriented-programming/your-code/main.ipynb
+++ b/module-1/lab-object-oriented-programming/your-code/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,25 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-16-5e9689705079>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-5e9689705079>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    column = []\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def twodimrecursive(mat):\n",
     "    # Your code here:\n",
-    "column = []    \n",
+    "    column = []    \n",
     "    for row in mat:\n",
     "        column.append(row[2]) \n",
-    "        if len(column)\n",
+    "        if len(column) == 2:\n",
+    "            return True\n",
     "    return column"
    ]
   },
@@ -154,9 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def rowcolumn(mat):\n",
     "    # This function takes a list of lists and returns the size of the rows and the columns \n",
@@ -167,12 +170,14 @@
     "    # Sample Output: (2, 3)\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    np_array_mat = np.array(mat)  \n",
+    "    return np_array_mat.shape\n",
+    "rowcolumn([[1,2,3],[4,5,6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +186,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +219,15 @@
     "    # Sample Output: True\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    np_array_mat1 = np.array(mat1)\n",
+    "    np_array_mat2 = np.array(mat2)\n",
+    "    if(len(np_array_mat1.shape) == len(np_array_mat2.shape)):\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +236,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,21 +269,25 @@
     "    # Sample Output: [[8,10,12],[14,16,18]]\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    np_array_mat1 = np.array(mat1)\n",
+    "    np_array_mat2 = np.array(mat2)\n",
+    "    add = np_array_mat1 + np_array_mat2\n",
+    "    return add"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[8, 10, 12], [14, 16, 18]]"
+       "array([[ 8, 10, 12],\n",
+       "       [14, 16, 18]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +324,7 @@
     "        \n",
     "        # Your code here:\n",
     "        np_mat = np.array(mat)\n",
-    "        self.mat = mat\n",
+    "        self.mat = np_mat[0,0]\n",
     "        self.rows = np_mat[0;]\n",
     "        self.cols = np_mat[;0]\n",
     "        self.rowcolumn = rowcolumn(self.mat)\n",
@@ -325,7 +337,7 @@
     "    \n",
     "    # Your code here:\n",
     "    def twodim(self, mat):\n",
-    "        if(len(self.rowcolumn) == 2):\n",
+    "        if len(self.mat) == 2:\n",
     "            return True\n",
     "        \n",
     "        \n",
@@ -337,12 +349,17 @@
     "    \n",
     "    # Your code here:\n",
     "\n",
-    "    \n",
+    "    def rowcolumn(self, mat):\n",
+    "        return self.mat.shape\n",
+    "\n",
     "    \n",
     "    # Insert the compare function here\n",
     "    # Add self as the first argument passed to the function\n",
     "    \n",
     "    # Your code here:\n",
+    "    \n",
+    "    def compare(self, mat1, mat2):\n",
+    "        return (len(np_array_mat1.shape) == len(np_array_mat2.shape)\n",
     "\n",
     "\n",
     "    # Insert the addition function here\n",
@@ -351,7 +368,11 @@
     "    # Change any reference to mat1 and mat2 to self.mat and matrix.mat respectively\n",
     "    # Return your result as a Matrix2D(result). This will ensure that we return a new matrix and not a list of lists.\n",
     "    \n",
-    "    # Your code here:\n"
+    "    # Your code here:\n",
+    "                \n",
+    "    def addition(self, mat1, mat2)        \n",
+    "     add = np_array_mat1 + np_array_mat2\n",
+    "    return add\n"
    ]
   },
   {
@@ -391,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,21 +425,26 @@
     "    # Sample Output: [[1,4], [2,5], [3,6]]\n",
     "    \n",
     "    # Your code here:\n",
+    "    np_array_mat = np.array(mat)\n",
+    "    transposed = np_array_mat.transpose()\n",
+    "    return transposed\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 4], [2, 5], [3, 6]]"
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
