--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -14,17 +14,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Challenge 1 - Passing a Lambda Expression to a Function\n",
+    "Challenge 1 - Passing a Lambda Expression to a Function\n",
     "\n",
     "In the next excercise you will create a function that returns a lambda expression. Create a function called `modify_list`. The function takes two arguments, a list and a lambda expression. The function iterates through the list and applies the lambda expression to every element in the list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HOLA', 'CHAO']\n"
+     ]
+    }
+   ],
    "source": [
+    "lista = [\"Hola\", \"Chao\"]\n",
+    "lam_fun = lambda s: s.upper()\n",
+    "\n",
     "def modify_list(lst, lmbda):\n",
     "    \"\"\"\n",
     "    Input: list and lambda expression\n",
@@ -33,7 +44,12 @@
     "    \"\"\"\n",
     "    \n",
     "    #your code here:\n",
-    "    \n"
+    "    \n",
+    "    return [lmbda(e) for e in lst]\n",
+    "\n",
+    "print(modify_list(lista,lam_fun))\n",
+    "        \n",
+    "  \n"
    ]
   },
   {
@@ -47,12 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287.15"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "cels_to_kev = lambda k: k + 273.15\n",
+    "\n",
+    "cels_to_kev(14)"
    ]
   },
   {
@@ -64,13 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "285.15\n",
+      "296.15\n",
+      "311.15\n",
+      "218.14999999999998\n",
+      "297.15\n"
+     ]
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "for e in temps:\n",
+    "    print(cels_to_kev(e))\n",
+    "    \n"
    ]
   },
   {
@@ -84,11 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "mod = lambda a, b: 1 if a%b == 0 else 0\n",
+    "\n",
+    "print(mod(4,2))\n",
+    "print(mod(7,3))"
    ]
   },
   {
@@ -102,9 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "def divisor(b):\n",
     "    \"\"\"\n",
@@ -112,7 +181,12 @@
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "    return lambda a: 1 if a%b == 0 else 0\n",
+    "\n",
+    "print(divisor(2)(4))\n",
+    "print(divisor(7)(3))    "
    ]
   },
   {
@@ -124,11 +198,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "divisible5 = divisor(5)\n",
+    "\n",
+    "divisible5(30)\n",
+    "    "
    ]
   },
   {
@@ -140,18 +230,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
